Fix overflow in pre tag in project variant two

--- a/styles/variant-two-style.css
+++ b/styles/variant-two-style.css
@@ -228,6 +228,7 @@ pre {
     border-radius: 8px;
     max-inline-size: 596px;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 /* Box Model */
